--- a/notebooks/03-Array Operations.ipynb
+++ b/notebooks/03-Array Operations.ipynb
@@ -2,17 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Copying,-Sorting-and-Reshaping\" data-toc-modified-id=\"Copying,-Sorting-and-Reshaping-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Copying, Sorting and Reshaping</a></span><ul class=\"toc-item\"><li><span><a href=\"#Copy\" data-toc-modified-id=\"Copy-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Copy</a></span></li><li><span><a href=\"#View\" data-toc-modified-id=\"View-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>View</a></span></li><li><span><a href=\"#Sorting\" data-toc-modified-id=\"Sorting-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Sorting</a></span></li><li><span><a href=\"#Flatten:-Flattens-2D-array-to-1D-array\" data-toc-modified-id=\"Flatten:-Flattens-2D-array-to-1D-array-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Flatten: Flattens 2D array to 1D array</a></span></li><li><span><a href=\"#Transpose:-Transposes-array-(rows-become-columns-and-vice-versa)\" data-toc-modified-id=\"Transpose:-Transposes-array-(rows-become-columns-and-vice-versa)-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Transpose: Transposes array (rows become columns and vice versa)</a></span></li><li><span><a href=\"#Reshape:-Reshapes-arr-to-r-rows,-c-columns-without-changing-data\" data-toc-modified-id=\"Reshape:-Reshapes-arr-to-r-rows,-c-columns-without-changing-data-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Reshape: Reshapes arr to <code>r</code> rows, <code>c</code> columns without changing data</a></span></li><li><span><a href=\"#Resize:--Changes-arr-shape-to-rxc-and-fills-new-values-with-0\" data-toc-modified-id=\"Resize:--Changes-arr-shape-to-rxc-and-fills-new-values-with-0-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Resize:  Changes arr shape to <code>rxc</code> and fills new values with 0</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Copying / Sorting / Reshaping"
+    "# Copying, Sorting and Reshaping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import numpy \n",
     "import numpy as np"
    ]
   },
@@ -20,101 +31,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Copy: Copies array to new memory\n"
+    "## Copy\n",
+    "- Copies array to new memory\n",
+    "- **Syntax:** `np.copy(array)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
     }
    ],
    "source": [
+    "# create an array `A1`\n",
     "A1 = np.arange(10)\n",
-    "A2 = np.copy(A1)\n",
-    "A2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## View: Creates view of array elements with type(dtype)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.0e+00, 0.0e+00, 0.0e+00, 0.0e+00, 6.0e-08, 0.0e+00, 0.0e+00,\n",
-       "       0.0e+00, 1.2e-07, 0.0e+00, 0.0e+00, 0.0e+00, 1.8e-07, 0.0e+00,\n",
-       "       0.0e+00, 0.0e+00, 2.4e-07, 0.0e+00, 0.0e+00, 0.0e+00, 3.0e-07,\n",
-       "       0.0e+00, 0.0e+00, 0.0e+00, 3.6e-07, 0.0e+00, 0.0e+00, 0.0e+00,\n",
-       "       4.2e-07, 0.0e+00, 0.0e+00, 0.0e+00, 4.8e-07, 0.0e+00, 0.0e+00,\n",
-       "       0.0e+00, 5.4e-07, 0.0e+00, 0.0e+00, 0.0e+00], dtype=float16)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A3 = A2.view(np.float16)\n",
-    "A3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sort-1: Sorts array(Element-Wise)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 9,  2,  3,  1,  5, 10])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Unsorted array\n",
-    "A4 = np.array([9, 2, 3,1, 5, 10])\n",
-    "A4"
+    "print(A1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Call sort function\n",
-    "A4.sort()"
+    "# copy `A1` into A2 \n",
+    "A2 = np.copy(A1)\n",
+    "print(A2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## View\n",
+    "- Creates view of array elements with type(dtype)\n",
+    "- **Syntax:** `array.view(np.dtype)`"
    ]
   },
   {
@@ -123,60 +89,53 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 1,  2,  3,  5,  9, 10])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0e+00 0.0e+00 0.0e+00 0.0e+00 6.0e-08 0.0e+00 0.0e+00 0.0e+00 1.2e-07\n",
+      " 0.0e+00 0.0e+00 0.0e+00 1.8e-07 0.0e+00 0.0e+00 0.0e+00 2.4e-07 0.0e+00\n",
+      " 0.0e+00 0.0e+00 3.0e-07 0.0e+00 0.0e+00 0.0e+00 3.6e-07 0.0e+00 0.0e+00\n",
+      " 0.0e+00 4.2e-07 0.0e+00 0.0e+00 0.0e+00 4.8e-07 0.0e+00 0.0e+00 0.0e+00\n",
+      " 5.4e-07 0.0e+00 0.0e+00 0.0e+00]\n"
+     ]
     }
    ],
    "source": [
-    "# Sorted array\n",
-    "A4"
+    "# view of array A2 \n",
+    "A3 = A2.view(np.float16)\n",
+    "print(A3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sort-2: Sorts specific axis of array\n",
-    "![Axis](./figs/axis.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[4, 1, 3],\n",
-       "       [9, 5, 8]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Row and column unsorted\n",
-    "A5 = np.array([[4, 1, 3], [9, 5, 8]])\n",
-    "A5"
+    "## Sorting\n",
+    "- Returns a sorted copy of an array.\n",
+    "- **Syntax:** `array.sort()`\n",
+    "    - element-wise sorting(default) \n",
+    "    - axis = 0; row\n",
+    "    - axis = 1; column\n",
+    "![Axis](../img/axis.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 9  2  3  1  5 10]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Apply sort function on specific axis=0 \n",
-    "A5.sort(axis=0)"
+    "# Unsorted array\n",
+    "A4 = np.array([9, 2, 3,1, 5, 10])\n",
+    "print(A4) "
    ]
   },
   {
@@ -185,52 +144,57 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[4, 1, 3],\n",
-       "       [9, 5, 8]])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  5  9 10]\n"
+     ]
     }
    ],
    "source": [
-    "# Sorted array--> axis=0\n",
-    "A5"
+    "# Call sort function\n",
+    "A4.sort()\n",
+    "print(A4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Apply sort function on specific axis = 1\n",
-    "A5.sort(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1, 3, 4],\n",
-       "       [5, 8, 9]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 1 3]\n",
+      " [9 5 8]]\n"
+     ]
     }
    ],
    "source": [
-    "# Sorted array--> axis=1\n",
-    "A5"
+    "# Row and column unsorted\n",
+    "A5 = np.array([[4, 1, 3], [9, 5, 8]])\n",
+    "print(A5) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3 4]\n",
+      " [5 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apply sort function on column axis=1\n",
+    "A5.sort(axis=1)\n",
+    "print(A5)"
    ]
   },
   {
@@ -466,10 +430,10 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
