--- a/notebooks/01-Array Creation Function.ipynb
+++ b/notebooks/01-Array Creation Function.ipynb
@@ -675,14 +675,11 @@
     "## References\n",
     "- https://numpy.org/\n",
     "- https://www.edureka.co/blog/python-numpy-tutorial/\n",
-    "- https://github.com/enthought/Numpy-Tutorial-SciPyConf-2019"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*This notebook was created by [Jubayer Hossain](https://www.linkedin.com/in/jubayer28/) | Copyright &copy; 2020, [Jubayer Hossain](https://www.linkedin.com/in/jubayer28/)*"
+    "- https://github.com/enthought/Numpy-Tutorial-SciPyConf-2019\n",
+    "- [Python Machine Learning Cookbook](https://www.amazon.com/Python-Machine-Learning-Cookbook-Prateek/dp/1786464470)\n",
+    "<hr>\n",
+    "\n",
+    "*This notebook was created by [Jubayer Hossain](https://jhossain.me/) | Copyright &copy; 2020, [Jubayer Hossain](https://jhossain.me/)*"
    ]
   }
  ],
