--- a/notebooks/03-Array Operations.ipynb
+++ b/notebooks/03-Array Operations.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Copying,-Sorting-and-Reshaping\" data-toc-modified-id=\"Copying,-Sorting-and-Reshaping-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Copying, Sorting and Reshaping</a></span><ul class=\"toc-item\"><li><span><a href=\"#Copy\" data-toc-modified-id=\"Copy-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Copy</a></span></li><li><span><a href=\"#View\" data-toc-modified-id=\"View-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>View</a></span></li><li><span><a href=\"#Sorting\" data-toc-modified-id=\"Sorting-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Sorting</a></span></li><li><span><a href=\"#Flatten:-Flattens-2D-array-to-1D-array\" data-toc-modified-id=\"Flatten:-Flattens-2D-array-to-1D-array-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Flatten: Flattens 2D array to 1D array</a></span></li><li><span><a href=\"#Transpose:-Transposes-array-(rows-become-columns-and-vice-versa)\" data-toc-modified-id=\"Transpose:-Transposes-array-(rows-become-columns-and-vice-versa)-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Transpose: Transposes array (rows become columns and vice versa)</a></span></li><li><span><a href=\"#Reshape:-Reshapes-arr-to-r-rows,-c-columns-without-changing-data\" data-toc-modified-id=\"Reshape:-Reshapes-arr-to-r-rows,-c-columns-without-changing-data-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Reshape: Reshapes arr to <code>r</code> rows, <code>c</code> columns without changing data</a></span></li><li><span><a href=\"#Resize:--Changes-arr-shape-to-rxc-and-fills-new-values-with-0\" data-toc-modified-id=\"Resize:--Changes-arr-shape-to-rxc-and-fills-new-values-with-0-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Resize:  Changes arr shape to <code>rxc</code> and fills new values with 0</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Copying,-Sorting-and-Reshaping\" data-toc-modified-id=\"Copying,-Sorting-and-Reshaping-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Copying, Sorting and Reshaping</a></span><ul class=\"toc-item\"><li><span><a href=\"#Copy\" data-toc-modified-id=\"Copy-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Copy</a></span></li><li><span><a href=\"#View\" data-toc-modified-id=\"View-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>View</a></span></li><li><span><a href=\"#Sorting\" data-toc-modified-id=\"Sorting-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Sorting</a></span></li><li><span><a href=\"#Flatten:-Flattens-2D-array-to-1D-array\" data-toc-modified-id=\"Flatten:-Flattens-2D-array-to-1D-array-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Flatten: Flattens 2D array to 1D array</a></span></li><li><span><a href=\"#Transpose:-Transposes-array-(rows-become-columns-and-vice-versa)\" data-toc-modified-id=\"Transpose:-Transposes-array-(rows-become-columns-and-vice-versa)-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Transpose: Transposes array (rows become columns and vice versa)</a></span></li><li><span><a href=\"#Reshape:-Reshapes-arr-to-r-rows,-c-columns-without-changing-data\" data-toc-modified-id=\"Reshape:-Reshapes-arr-to-r-rows,-c-columns-without-changing-data-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Reshape: Reshapes arr to <code>r</code> rows, <code>c</code> columns without changing data</a></span></li><li><span><a href=\"#Resize:--Changes-arr-shape-to-rxc-and-fills-new-values-with-0\" data-toc-modified-id=\"Resize:--Changes-arr-shape-to-rxc-and-fills-new-values-with-0-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Resize:  Changes arr shape to <code>rxc</code> and fills new values with 0</a></span></li><li><span><a href=\"#References\" data-toc-modified-id=\"References-1.8\"><span class=\"toc-item-num\">1.8&nbsp;&nbsp;</span>References</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -284,7 +284,7 @@
    "metadata": {},
    "source": [
     "## Reshape: Reshapes arr to `r` rows, `c` columns without changing data\n",
-    "![Reshape](./figs/reshape.png)"
+    "![Reshape](../img/reshape.png)"
    ]
   },
   {
@@ -384,6 +384,20 @@
     "A9.resize(3, 2)\n",
     "A9"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "- https://numpy.org/\n",
+    "- https://www.edureka.co/blog/python-numpy-tutorial/\n",
+    "- https://github.com/enthought/Numpy-Tutorial-SciPyConf-2019\n",
+    "- [Python Machine Learning Cookbook](https://www.amazon.com/Python-Machine-Learning-Cookbook-Prateek/dp/1786464470)\n",
+    "<hr>\n",
+    "\n",
+    "*This notebook was created by [Jubayer Hossain](https://jhossain.me/) | Copyright &copy; 2020, [Jubayer Hossain](https://jhossain.me/)*"
+   ]
   }
  ],
  "metadata": {
@@ -433,7 +447,7 @@
    "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
