--- a/notebooks/07-NumPy Read World Examples .ipynb
+++ b/notebooks/07-NumPy Read World Examples .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NumPy Example"
+    "# NumPy Real World Examples"
    ]
   },
   {
@@ -354,11 +354,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## References\n",
+    "- https://numpy.org/\n",
+    "- https://www.edureka.co/blog/python-numpy-tutorial/\n",
+    "- https://github.com/enthought/Numpy-Tutorial-SciPyConf-2019\n",
+    "- [Python Machine Learning Cookbook](https://www.amazon.com/Python-Machine-Learning-Cookbook-Prateek/dp/1786464470)\n",
+    "<hr>\n",
+    "\n",
+    "*This notebook was created by [Jubayer Hossain](https://jhossain.me/) | Copyright &copy; 2020, [Jubayer Hossain](https://jhossain.me/)*"
+   ]
   }
  ],
  "metadata": {
