--- a/book/notebooks/00-Introduction to NumPy.ipynb
+++ b/book/notebooks/00-Introduction to NumPy.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Why Numpy?\n",
+    "## Why Numpy?\n",
     "- Less Memory\n",
     "- Fast\n",
     "- Convenient"
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculation\n",
+    "## Calculation\n",
     "- Element wise sum is not possible in Python list. But numpy can do that it is an advantage of numpy array\n"
    ]
   },
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Less Memory"
+    "## Less Memory"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Faster"
+    "## Faster"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating Arrays \n",
+    "## Creating Arrays \n",
     "- **Array:** Ordered collection of elements of basic data types of given length.\n",
     "- **Syntax**\n",
     "```python \n",
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Array with Categorical Entities \n",
+    "## Array with Categorical Entities \n",
     "- Numpy can handle different categorical entities. \n",
     "- All elements are coerced into same data type "
    ]
@@ -331,14 +331,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inspecting array properties"
+    "## Inspecting array properties"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Size \n",
+    "### Size \n",
     "- Returns number of elements in array\n",
     "- **Syntax:** `array.size`"
    ]
@@ -369,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Shape\n",
+    "### Shape\n",
     "- Returns dimensions of array (rows,columns)\n",
     "- **Syntax:** `array.shape`"
    ]
@@ -442,7 +442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data Type\n",
+    "### Data Type\n",
     "- Returns type of elements in array\n",
     "- **Syntax:** `array.size`"
    ]
@@ -473,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Type Conversion \n",
+    "## Type Conversion \n",
     " - Convert array elements to type dtype\n",
     " - **Syntax:** `array.astype(dtype)`\n",
     "     - dtype - data type "
@@ -506,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numpy array to Python List \n",
+    "## Numpy array to Python List \n",
     "- Returns the Python list \n",
     "- **Syntax:** `array.tolist()`"
    ]
@@ -556,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Help: View documentation\n",
+    "## Get Help: View documentation\n",
     "- Returns a documentation\n",
     "- **Syntax:** `np.info(np.function)`\n",
     "    - function - linspace, logspace, eye, ones, zeros etc."
